--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
 
 	<title>ISS 🛰️ tracker with Svelte</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<meta property="og:title" content="ISS 🛰️ tracker with Svelte and Leaflet">
+	<meta property="og:description" content="Track ISS location and passes over your location">
+	<meta property="og:url" content="https://iss.anoram.com/">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://iss.anoram.com/socialshare.jpg">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:creator" content="@shriji">
+	<meta name="twitter:url" content="https://iss.anoram.com/">
+	<meta name="twitter:title" content="ISS 🛰️ tracker with Svelte and Leaflet">
+	<meta name="twitter:description" content="Track ISS location and passes over your location">
+	<meta name="twitter:image" content="https://iss.anoram.com/twshare.jpg">
+	<meta name="Description" content="ISS 🛰️ tracker with Svelte">
+	<link rel='icon' type='image/png' href='./favicon.png'>
+
+	<link rel='stylesheet' href='./global.css'>
+	<link rel='stylesheet' href='./build/bundle.css'>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" crossorigin="" />
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='./build/bundle.js'></script>
 </head>
 
 <body>
