--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<meta property="og:description" content="Track ISS location and passes over your location">
 	<meta property="og:url" content="https://iss.anoram.com/">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://iss.anoram.com/socialshare.jpg">
+	<meta property="og:image" content="https://iss.anoram.com/socialshare.png">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:creator" content="@shriji">
 	<meta name="twitter:url" content="https://iss.anoram.com/">
 	<meta name="twitter:title" content="ISS 🛰️ tracker with Svelte and Leaflet">
 	<meta name="twitter:description" content="Track ISS location and passes over your location">
-	<meta name="twitter:image" content="https://iss.anoram.com/twshare.jpg">
+	<meta name="twitter:image" content="https://iss.anoram.com/twshare.png">
 	<meta name="Description" content="ISS 🛰️ tracker with Svelte">
 	<link rel='icon' type='image/png' href='./favicon.png'>
 
