--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
@@ -23,9 +24,8 @@
 
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" crossorigin="" />
 
-	<script defer src='./build/bundle.js'></script>
+	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
@@ -37,5 +37,4 @@
 		</ul>
 	</nav>
 </body>
-
 </html>
