--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>ISS 🛰️ tracker with Svelte</title>
+	<title>ISS tracker with Svelte</title>
 
 	<meta property="og:title" content="ISS 🛰️ tracker with Svelte and Leaflet">
 	<meta property="og:description" content="Track ISS location and passes over your location">
